fixed theme change alignment and anims

--- a/assets/css/common/header.css
+++ b/assets/css/common/header.css
@@ -11,13 +11,15 @@
     display: block;
 }
 
-.nav button {
-    width: 35px;
-    height: 35px;
+.nav button svg{
+    width: 37px;
+    height: 37px;
     transition: 0.5s;
-    font: icon !important;
+    padding: 8px;
+    border-radius: 10%;
+    font: caption !important;
 }
-.nav button:hover {
+.nav button svg:hover {
     background-color: var(--tertiary);
     border-radius: 50%;
 }
@@ -56,6 +58,8 @@
 
 button#theme-toggle {
     font-size: 26px;
+    vertical-align: middle;
+    font: caption !important;
 }
 
 body.dark #moon {
